<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pandora</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_namee">Pandora</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_password">Contraseña</string>
    <string name="button_signin">Sign in</string>
    <string name="button_twitter">Twitter</string>
    <string name="button_facebook">Facebook</string>
    <string name="button_twitter_out">Sign out</string>
    <string name="desc">Description</string>
    <string name="register">Registrarse</string>
    <string name="register_username">Username</string>
    <string name="register_password">Contraseña</string>
    <string name="register_confirm_password">Confirmar contraseña</string>
    <string name="register_email">Email</string>
    <string name="register_surname">Apellidos</string>
    <string name="register_name">Nombre</string>
    <string name="button_submit">Enviar</string>
    <string name="button_cancel">Cancelar</string>
    <string name="button_edit_image">Editar foto</string>
    <string name="button_send">Enviar</string>
    <string name="button_register">Registrarse</string>
    <string name="content">Escribe tu post aqui</string>
    <string name="hint_search">Buscar asignatura</string> 
    <string name="button_publish">Nuevo Post</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="recent_activity">Actividad reciente</string>
    <string name="commentbypost">Comentarios</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="subjects">Asignaturas</string>
    <string name="users2">Asignaturas</string>
    <string name="notifications">Mis notificaciones</string>
    <string name="button_addToSubject">V</string>
    <string name="button_search">Buscar</string>
    <string name="etcontent">Escribir mensaje</string>
    <string name="documents">Documentos</string>
    <string name="create_group_name">Nombre para el Grupo</string>
     <string name="schedule_activity">Mi Horario</string>
    <string name="users">Usuarios</string>
    <string name="groups">Grupos</string>
    <string name="hint_search_2">Buscar usuarios</string>

</resources>
