<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" 
    android:background="#004c99">
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right" >
        
                <!-- Header starts -->

        <TextView
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/register"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <!-- Header ends -->
        
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView1"
            android:orientation="vertical"
            android:padding="30dip" >

            <TextView
                android:id="@+id/lUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_username"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/register_username"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000022"
                android:background="#fff" />
             <TextView
                android:id="@+id/lPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_password"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:background="#fff"
                android:hint="@string/register_password"
                android:inputType="text"
                android:password="true"
                android:textColor="#000022"
                android:singleLine="true" />

             <TextView
                android:id="@+id/lconfirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_confirm_password"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/etconfirmPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:background="#fff"
                android:hint="@string/register_password"
                android:inputType="text"
                android:password="true"
                android:textColor="#000022"
                android:singleLine="true" />
          <TextView
                android:id="@+id/lName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_name"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/register_name"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000022"
                android:background="#fff" />
             <TextView 
                android:id="@+id/lSurname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_surname"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/etSurname"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/register_surname"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000022"
                android:background="#fff"
                 />
             <TextView
                android:id="@+id/lEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_email"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dip"
                android:layout_marginTop="5dip"
                android:hint="@string/register_email"
                android:inputType="text"
                android:singleLine="true"
                android:textColor="#000022"
                android:background="#fff" />
        </LinearLayout>

                 <Button
                     android:id="@+id/bSubit"
                     android:layout_width="100dp"
                     android:layout_height="25dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_marginLeft="45dp"
                     android:background="@drawable/border_button"
                      android:onClick="register"
                     android:text="@string/button_submit"
                     android:textColor="#fff" />

                 <Button
                     android:id="@+id/bCancel"
                     android:layout_width="100dp"
                     android:layout_height="25dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:layout_marginRight="45dp"
                     android:background="@drawable/border_button"
                      android:onClick="cancel"
                     android:text="@string/button_cancel"
                     android:textColor="#fff" />
        
    </RelativeLayout>

</ScrollView>


