<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" 
    android:background="#004c99">
  
   <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="end" >
        
        <LinearLayout
           android:id="@+id/linearLayout1"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"
           android:layout_alignParentTop="true"
           android:background="#fff"
           android:gravity="end"
           android:orientation="horizontal" >

           <LinearLayout
               android:layout_width="50dp"
               android:layout_height="50dp"
               android:background="#fff"
               
               android:gravity="end"
               android:orientation="horizontal" >

               <ImageView
                   android:id="@+id/image"
                   android:layout_width="50dp"
                   android:layout_height="50dp"
                   android:layout_gravity="end"
                   android:adjustViewBounds="true"
                   android:contentDescription="@string/desc"

                   android:scaleType="fitCenter"

                   android:src="@drawable/ic_menu_list" />
           </LinearLayout>
       </LinearLayout>

        <EditText
            android:id="@+id/postContent"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:layout_above="@+id/bSend"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/linearLayout1"
            android:layout_centerInParent="false"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="15dp"
            android:background="#fff"
            android:ems="10"
            android:textColor="#000022" 
            android:gravity="center_vertical|top"
            android:hint="@string/content" />
        
                        <Button
                     android:id="@+id/bCancel"
                     android:layout_width="100dp"
                     android:layout_height="25dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginLeft="30dp"
                     android:layout_marginStart="30dp"
                     android:background="@drawable/border_button"
                     android:text="@string/button_cancel"
                     android:textColor="#fff" />

                 <Button
                     android:id="@+id/bSend"
                     android:layout_width="100dp"
                     android:layout_height="25dp"
                     android:layout_alignParentBottom="true"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentEnd="true"
                     android:layout_marginRight="30dp"
                     android:layout_marginEnd="30dp"
                     android:background="@drawable/border_button"
                     android:text="@string/button_send"
                     android:textColor="#fff" 
                     android:onClick="sendComment"/>

                 <ImageView
                     android:id="@+id/image3"
                     android:layout_width="30dp"
                     android:layout_height="30dp"
                     android:layout_alignParentBottom="true"
                     
                     android:layout_centerHorizontal="true"
                     android:contentDescription="@string/desc"
                     
                     
                     android:scaleType="fitCenter"
                     android:src="@drawable/camera" />
       
            </RelativeLayout>

</ScrollView>
       